packages/audiocpp/src/include/audiocpp_ffi.h

/* -------------------------------------------------------------------------- */
/* Opaque handles                                                             */
/* -------------------------------------------------------------------------- */

typedef struct audiocpp_model_t audiocpp_model;
typedef struct audiocpp_session_t audiocpp_session;
typedef struct audiocpp_audio_t audiocpp_audio;
/* -------------------------------------------------------------------------- */
/* Parameter structs                                                          */
/* -------------------------------------------------------------------------- */

/*
 * A flat key/value map: `keys` and `values` are parallel arrays of `count`
 * UTF-8 strings. Pass count == 0 with NULL arrays for "no options".
 *
 * These pass through to audio.cpp's --load-option / --session-option /
 * --request-option maps verbatim, which is why they stay untyped here: the
 * option set is per model family and evolves upstream. The Dart package layers
 * typed request builders (e.g. MiniMaxMusic3Request) on top.
 */
typedef struct audiocpp_options {
    const char * const * keys;
    const char * const * values;
    int32_t count;
} audiocpp_options;
typedef struct audiocpp_model_params {
    /* Required. Directory holding the model package, e.g. MiniMax-Music3-GGUF. */
    const char * model_path;
    /* Optional. Family hint, e.g. "minimax_music3". Without it the registry has
     * to infer the family from the package contents. */
    const char * family;
    /* Optional. Explicit path to a model_specs/<family>.json. Needed when the
     * library was not built with AUDIOCPP_DEPLOYMENT_BUILD=ON and no
     * model_specs/ directory sits near the model or the process cwd. */
    const char * model_spec_override;
    /* Optional. Select a named config/weight asset inside the package. */
    const char * config_id;
    const char * weight_id;
    audiocpp_options load_options;
} audiocpp_model_params;
typedef struct audiocpp_session_params {
    int32_t task;     /* audiocpp_task */
    int32_t backend;  /* audiocpp_backend */
    /* Device index within the chosen backend's ggml registry. */
    int32_t device;
    /* Must be > 0. */
    int32_t threads;
    audiocpp_options session_options;
} audiocpp_session_params;
typedef struct audiocpp_request {
    /* Optional. Primary text input. For MiniMax Music 3 this is the style
     * caption; the lyrics travel in request_options under "lyrics". */
    const char * text;
    /* Optional. BCP-47-ish language tag passed alongside `text`. */
    const char * language;
    audiocpp_options request_options;
} audiocpp_request;
/* -------------------------------------------------------------------------- */
/* Library-level entry points                                                 */
/* -------------------------------------------------------------------------- */

/* Major/minor of the ABI this library was compiled with. */
AUDIOCPP_API int32_t audiocpp_abi_version_major(void);
AUDIOCPP_API int32_t audiocpp_abi_version_minor(void);
/*
 * Message for the most recent failing call on the calling thread. Valid until
 * the next audiocpp_* call on that same thread. Never NULL; returns "" when no
 * error has been recorded.
 */
AUDIOCPP_API const char * audiocpp_last_error(void);
/* Number of ggml devices visible across all compiled-in backends. */
AUDIOCPP_API int32_t audiocpp_device_count(void);
/*
 * Describes device `index` (0 <= index < audiocpp_device_count()).
 * Each out parameter may be NULL if that field is not wanted. The returned
 * strings are owned by the library and stay valid until the next
 * audiocpp_device_info call on the same thread.
 */
AUDIOCPP_API int32_t /* audiocpp_status */ audiocpp_device_info(
    int32_t index,
    const char ** out_backend,
    const char ** out_name,
    const char ** out_type,
    int32_t * out_device_index);
/* -------------------------------------------------------------------------- */
/* Model                                                                      */
/* -------------------------------------------------------------------------- */

/*
 * Loads a model package. This reads config and weight metadata but does not
 * necessarily fault in every tensor -- that happens lazily per session.
 * Blocking and potentially slow; call off the UI thread.
 */
AUDIOCPP_API int32_t /* audiocpp_status */ audiocpp_model_load(
    const audiocpp_model_params * params,
    audiocpp_model ** out_model);
AUDIOCPP_API void audiocpp_model_free(audiocpp_model * model);
/* Family reported by the loaded model, e.g. "minimax_music3". Owned by the
 * model handle; valid until the model is freed. Returns NULL for a NULL model. */
AUDIOCPP_API const char * audiocpp_model_family(const audiocpp_model * model);
/* Non-zero when the model advertises support for `task` in offline mode. */
AUDIOCPP_API int32_t audiocpp_model_supports_task(
    const audiocpp_model * model,
    int32_t task /* audiocpp_task */);
/* -------------------------------------------------------------------------- */
/* Session                                                                    */
/* -------------------------------------------------------------------------- */

/*
 * Creates an offline task session against a loaded model. Streaming mode is not
 * exposed yet -- MiniMax Music 3 is offline-only, and a streaming surface needs
 * a pull/callback design that this ABI would have to grow deliberately.
 *
 * The session borrows `model`; the model must outlive the session.
 */
AUDIOCPP_API int32_t /* audiocpp_status */ audiocpp_session_create(
    audiocpp_model * model,
    const audiocpp_session_params * params,
    audiocpp_session ** out_session);
AUDIOCPP_API void audiocpp_session_free(audiocpp_session * session);
/*
 * Runs one offline inference. Calls prepare() then run() as audiocpp_cli does.
 * Blocking; for MiniMax Music 3 this is minutes, not milliseconds.
 *
 * On success `*out_audio` owns the generated samples and must be released with
 * audiocpp_audio_free.
 */
AUDIOCPP_API int32_t /* audiocpp_status */ audiocpp_session_run(
    audiocpp_session * session,
    const audiocpp_request * request,
    audiocpp_audio ** out_audio);
/*
 * Asks the running generation to stop. Returns AUDIOCPP_OK always; there is
 * nothing to fail at, and no way to know from here whether a run is in flight.
 *
 * Deliberately takes no session. The point of this call is that it is safe from
 * a thread other than the one blocked inside audiocpp_session_run -- so it
 * touches no handle, only a process-wide flag. Passing a session pointer would
 * invite exactly the concurrent handle access the rest of this ABI forbids.
 *
 * Consequently it applies to whichever run is in flight, which is sound only
 * because the engine runs one at a time. Should that ever change, this call
 * needs a run identity and this comment needs deleting.
 *
 * The flag is cleared when a run starts, so calling this with nothing running
 * does not stop the next one. The stopped run returns AUDIOCPP_CANCELLED, and
 * the session remains usable.
 *
 * Cancellation is honoured between units of work, not instantly: MiniMax Music
 * 3 checks per AR frame and per denoising step, both sub-second.
 */
AUDIOCPP_API int32_t /* audiocpp_status */ audiocpp_cancel_request(void);
/*
 * Suspends the running generation at its next checkpoint, and resumes it.
 *
 * Same threading contract as audiocpp_cancel_request, and for the same reason:
 * the caller of audiocpp_session_run is blocked inside it and cannot ask
 * itself to stop.
 *
 * Pausing blocks the running thread rather than unwinding it. A resumed run
 * therefore produces exactly the audio it would have produced uninterrupted --
 * nothing is torn down and no sampling state is reconstructed. The cost is that
 * the model stays resident for the whole pause, which for MiniMax Music 3 is
 * several gigabytes and varies by phase, so an indefinite pause is an
 * indefinite hold on that memory.
 *
 * audiocpp_cancel_request wakes a paused run. Nothing else does, so a caller
 * that pauses and then waits on the run without resuming or cancelling it will
 * wait forever.
 *
 * Resuming a run that is not paused does nothing, as does pausing one that is
 * already paused or already stopping.
 */
AUDIOCPP_API int32_t /* audiocpp_status */ audiocpp_pause_request(void);
AUDIOCPP_API int32_t /* audiocpp_status */ audiocpp_resume_request(void);
typedef struct audiocpp_progress {
    int32_t phase; /* audiocpp_progress_phase */
    /* Identifies the run this reading came from; a fresh run gets a new one.
     * A caller polling asynchronously must ignore a reading whose serial is not
     * the run it is displaying, or it will render the tail of the previous run
     * as the opening of this one. */
    int32_t run_serial;
    /* Units completed out of the phase's total. Units are per-phase and not
     * comparable across phases. AUDIOCPP_PHASE_AR's total is an upper bound --
     * the model can stop early -- so that phase can end before done reaches it. */
    int64_t done;
    int64_t total;
    /* Wall time since this phase began, which is what a rate has to be measured
     * against. Includes any time the run spent paused. */
    int64_t phase_elapsed_ms;
} audiocpp_progress;
/*
 * Reads how far the generation in flight has got.
 *
 * Polled rather than pushed, and deliberately: a callback would have to be
 * delivered to the thread that called audiocpp_session_run, and that thread is
 * blocked inside it for the whole run -- so nothing would arrive until the run
 * it described had finished. Reading from another thread has the same soundness
 * argument as audiocpp_cancel_request.
 *
 * Cheap enough to poll on a UI timer: one lock and a struct copy. Never fails
 * for want of a run -- with nothing running it reports AUDIOCPP_PHASE_UNKNOWN.
 *
 * Only families that report progress populate this. One that does not stays at
 * AUDIOCPP_PHASE_UNKNOWN for the whole run, which a caller should show as
 * indeterminate rather than as no progress.
 */
AUDIOCPP_API int32_t /* audiocpp_status */ audiocpp_progress_query(audiocpp_progress * out_progress);
/* -------------------------------------------------------------------------- */
/* Audio results                                                              */
/* -------------------------------------------------------------------------- */

AUDIOCPP_API void audiocpp_audio_free(audiocpp_audio * audio);
AUDIOCPP_API int32_t audiocpp_audio_sample_rate(const audiocpp_audio * audio);
AUDIOCPP_API int32_t audiocpp_audio_channels(const audiocpp_audio * audio);
/* Total float count across all channels (interleaved), not per-channel frames. */
AUDIOCPP_API int64_t audiocpp_audio_sample_count(const audiocpp_audio * audio);