packages/audiocpp/lib/src/ffi/audiocpp_bindings.g.dart

// GENERATED CODE - DO NOT MODIFY BY HAND.
// Regenerate with: dart run ffigen --config ffigen.yaml
// ignore_for_file: always_specify_types, camel_case_types, non_constant_identifier_names
// ignore_for_file: unused_element, unused_field, public_member_api_docs, constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Low-level bindings to libaudiocpp_ffi, generated from audiocpp_ffi.h.
///
/// Do not edit by hand and do not use directly from application code -- the typed
/// API in package:audiocpp owns handle lifetimes and error translation.
///
class AudioCppBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  AudioCppBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  AudioCppBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// Major/minor of the ABI this library was compiled with.
  int audiocpp_abi_version_major() {
    return _audiocpp_abi_version_major();
  }

  late final _audiocpp_abi_version_majorPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function()>>(
        'audiocpp_abi_version_major',
      );
  late final _audiocpp_abi_version_major = _audiocpp_abi_version_majorPtr
      .asFunction<int Function()>();

  int audiocpp_abi_version_minor() {
    return _audiocpp_abi_version_minor();
  }

  late final _audiocpp_abi_version_minorPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function()>>(
        'audiocpp_abi_version_minor',
      );
  late final _audiocpp_abi_version_minor = _audiocpp_abi_version_minorPtr
      .asFunction<int Function()>();

  /// Message for the most recent failing call on the calling thread. Valid until
  /// the next audiocpp_* call on that same thread. Never NULL; returns "" when no
  /// error has been recorded.
  ffi.Pointer<ffi.Char> audiocpp_last_error() {
    return _audiocpp_last_error();
  }

  late final _audiocpp_last_errorPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'audiocpp_last_error',
      );
  late final _audiocpp_last_error = _audiocpp_last_errorPtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();

  /// Number of ggml devices visible across all compiled-in backends.
  int audiocpp_device_count() {
    return _audiocpp_device_count();
  }

  late final _audiocpp_device_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function()>>(
        'audiocpp_device_count',
      );
  late final _audiocpp_device_count = _audiocpp_device_countPtr
      .asFunction<int Function()>();

  int audiocpp_device_info(
    int index,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_backend,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_name,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_type,
    ffi.Pointer<ffi.Int32> out_device_index,
  ) {
    return _audiocpp_device_info(
      index,
      out_backend,
      out_name,
      out_type,
      out_device_index,
    );
  }

  late final _audiocpp_device_infoPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Int32,
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
            ffi.Pointer<ffi.Int32>,
          )
        >
      >('audiocpp_device_info');
  late final _audiocpp_device_info = _audiocpp_device_infoPtr
      .asFunction<
        int Function(
          int,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Int32>,
        )
      >();

  int audiocpp_model_load(
    ffi.Pointer<audiocpp_model_params> params,
    ffi.Pointer<ffi.Pointer<audiocpp_model>> out_model,
  ) {
    return _audiocpp_model_load(params, out_model);
  }

  late final _audiocpp_model_loadPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<audiocpp_model_params>,
            ffi.Pointer<ffi.Pointer<audiocpp_model>>,
          )
        >
      >('audiocpp_model_load');
  late final _audiocpp_model_load = _audiocpp_model_loadPtr
      .asFunction<
        int Function(
          ffi.Pointer<audiocpp_model_params>,
          ffi.Pointer<ffi.Pointer<audiocpp_model>>,
        )
      >();

  void audiocpp_model_free(ffi.Pointer<audiocpp_model> model) {
    return _audiocpp_model_free(model);
  }

  late final _audiocpp_model_freePtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<audiocpp_model>)>
      >('audiocpp_model_free');
  late final _audiocpp_model_free = _audiocpp_model_freePtr
      .asFunction<void Function(ffi.Pointer<audiocpp_model>)>();

  /// Family reported by the loaded model, e.g. "minimax_music3". Owned by the
  /// model handle; valid until the model is freed. Returns NULL for a NULL model.
  ffi.Pointer<ffi.Char> audiocpp_model_family(
    ffi.Pointer<audiocpp_model> model,
  ) {
    return _audiocpp_model_family(model);
  }

  late final _audiocpp_model_familyPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<audiocpp_model>)
        >
      >('audiocpp_model_family');
  late final _audiocpp_model_family = _audiocpp_model_familyPtr
      .asFunction<
        ffi.Pointer<ffi.Char> Function(ffi.Pointer<audiocpp_model>)
      >();

  /// Non-zero when the model advertises support for `task` in offline mode.
  int audiocpp_model_supports_task(
    ffi.Pointer<audiocpp_model> model,
    int task,
  ) {
    return _audiocpp_model_supports_task(model, task);
  }

  late final _audiocpp_model_supports_taskPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<audiocpp_model>, ffi.Int32)
        >
      >('audiocpp_model_supports_task');
  late final _audiocpp_model_supports_task = _audiocpp_model_supports_taskPtr
      .asFunction<int Function(ffi.Pointer<audiocpp_model>, int)>();

  int audiocpp_session_create(
    ffi.Pointer<audiocpp_model> model,
    ffi.Pointer<audiocpp_session_params> params,
    ffi.Pointer<ffi.Pointer<audiocpp_session>> out_session,
  ) {
    return _audiocpp_session_create(model, params, out_session);
  }

  late final _audiocpp_session_createPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<audiocpp_model>,
            ffi.Pointer<audiocpp_session_params>,
            ffi.Pointer<ffi.Pointer<audiocpp_session>>,
          )
        >
      >('audiocpp_session_create');
  late final _audiocpp_session_create = _audiocpp_session_createPtr
      .asFunction<
        int Function(
          ffi.Pointer<audiocpp_model>,
          ffi.Pointer<audiocpp_session_params>,
          ffi.Pointer<ffi.Pointer<audiocpp_session>>,
        )
      >();

  void audiocpp_session_free(ffi.Pointer<audiocpp_session> session) {
    return _audiocpp_session_free(session);
  }

  late final _audiocpp_session_freePtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<audiocpp_session>)>
      >('audiocpp_session_free');
  late final _audiocpp_session_free = _audiocpp_session_freePtr
      .asFunction<void Function(ffi.Pointer<audiocpp_session>)>();

  int audiocpp_session_run(
    ffi.Pointer<audiocpp_session> session,
    ffi.Pointer<audiocpp_request> request,
    ffi.Pointer<ffi.Pointer<audiocpp_audio>> out_audio,
  ) {
    return _audiocpp_session_run(session, request, out_audio);
  }

  late final _audiocpp_session_runPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<audiocpp_session>,
            ffi.Pointer<audiocpp_request>,
            ffi.Pointer<ffi.Pointer<audiocpp_audio>>,
          )
        >
      >('audiocpp_session_run');
  late final _audiocpp_session_run = _audiocpp_session_runPtr
      .asFunction<
        int Function(
          ffi.Pointer<audiocpp_session>,
          ffi.Pointer<audiocpp_request>,
          ffi.Pointer<ffi.Pointer<audiocpp_audio>>,
        )
      >();

  int audiocpp_cancel_request() {
    return _audiocpp_cancel_request();
  }

  late final _audiocpp_cancel_requestPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function()>>(
        'audiocpp_cancel_request',
      );
  late final _audiocpp_cancel_request = _audiocpp_cancel_requestPtr
      .asFunction<int Function()>();

  int audiocpp_pause_request() {
    return _audiocpp_pause_request();
  }

  late final _audiocpp_pause_requestPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function()>>(
        'audiocpp_pause_request',
      );
  late final _audiocpp_pause_request = _audiocpp_pause_requestPtr
      .asFunction<int Function()>();

  int audiocpp_resume_request() {
    return _audiocpp_resume_request();
  }

  late final _audiocpp_resume_requestPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function()>>(
        'audiocpp_resume_request',
      );
  late final _audiocpp_resume_request = _audiocpp_resume_requestPtr
      .asFunction<int Function()>();

  int audiocpp_progress_query(ffi.Pointer<audiocpp_progress> out_progress) {
    return _audiocpp_progress_query(out_progress);
  }

  late final _audiocpp_progress_queryPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<audiocpp_progress>)>
      >('audiocpp_progress_query');
  late final _audiocpp_progress_query = _audiocpp_progress_queryPtr
      .asFunction<int Function(ffi.Pointer<audiocpp_progress>)>();

  /// -------------------------------------------------------------------------- */
  /// /* Audio results                                                              */
  /// /* --------------------------------------------------------------------------
  void audiocpp_audio_free(ffi.Pointer<audiocpp_audio> audio) {
    return _audiocpp_audio_free(audio);
  }

  late final _audiocpp_audio_freePtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<audiocpp_audio>)>
      >('audiocpp_audio_free');
  late final _audiocpp_audio_free = _audiocpp_audio_freePtr
      .asFunction<void Function(ffi.Pointer<audiocpp_audio>)>();

  int audiocpp_audio_sample_rate(ffi.Pointer<audiocpp_audio> audio) {
    return _audiocpp_audio_sample_rate(audio);
  }

  late final _audiocpp_audio_sample_ratePtr =
      _lookup<
        ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<audiocpp_audio>)>
      >('audiocpp_audio_sample_rate');
  late final _audiocpp_audio_sample_rate = _audiocpp_audio_sample_ratePtr
      .asFunction<int Function(ffi.Pointer<audiocpp_audio>)>();

  int audiocpp_audio_channels(ffi.Pointer<audiocpp_audio> audio) {
    return _audiocpp_audio_channels(audio);
  }

  late final _audiocpp_audio_channelsPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<audiocpp_audio>)>
      >('audiocpp_audio_channels');
  late final _audiocpp_audio_channels = _audiocpp_audio_channelsPtr
      .asFunction<int Function(ffi.Pointer<audiocpp_audio>)>();

  /// Total float count across all channels (interleaved), not per-channel frames.
  int audiocpp_audio_sample_count(ffi.Pointer<audiocpp_audio> audio) {
    return _audiocpp_audio_sample_count(audio);
  }

  late final _audiocpp_audio_sample_countPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int64 Function(ffi.Pointer<audiocpp_audio>)>
      >('audiocpp_audio_sample_count');
  late final _audiocpp_audio_sample_count = _audiocpp_audio_sample_countPtr
      .asFunction<int Function(ffi.Pointer<audiocpp_audio>)>();
